@@ -26,8 +26,8 @@
 # PLEASE DO NOT CHANGE FORMAT OF __version__ LINE (setup.py reads this)
 
 __author__    = "Thomas Perl <thp@perli.net>"
-__version__   = "0.7+svn20060407"
-__date__      = "2006-04-07"
+__version__   = "0.7+svn20060408"
+__date__      = "2006-04-08"
 __copyright__ = "Copyright (c) 2005-2006 %s. All rights reserved." % __author__
 __licence__   = "GPL"
 
