@@ -5,6 +5,7 @@ Sat, 08 Apr 2006 09:56:41 +0200 <thp@perli.net>
 	* Fixed a bug that doesn't save settings of a channel when the 
 	  localDB was empty
 	* Updated German translation
+	* Fixed a bug with localDB channel list display
 
 Sat, 08 Apr 2006 08:44:31 +0200 <thp@perli.net>
 	* Applied patch for French translation (thanks Alain Tauch)
